--- a/Solution/build.gradle
+++ b/Solution/build.gradle
@@ -18,4 +18,7 @@ dependencies {
 
 jar {
     manifest.attributes "Main-Class": "se.kth.sda.Main"
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
