--- a/Solution/build.gradle
+++ b/Solution/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.1.0'
     compile group: 'org.json', name: 'json', version: '20190722'
 }
 
